Creato con Colab

--- a/data_processing5.ipynb
+++ b/data_processing5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNHf0AVnGhtHou7u0czMk+H",
+      "authorship_tag": "ABX9TyPOzGhRKH/stvsgv45sVXhv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,11 +28,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "id": "uGiuwQk02MUs"
+        "id": "uGiuwQk02MUs",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "70e8a9b6-700b-4ea7-cc60-82be02c43b70"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Decompressione CSV_train.zip...\n",
+            "Fatto!\n"
+          ]
+        }
+      ],
       "source": [
         "# --- CELLA 1: INSTALLAZIONE E SETUP ---\n",
         "!pip install -q flwr pandas numpy scipy scikit-learn\n",
@@ -171,9 +184,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0IktUx0d2n3l",
-        "outputId": "18a83b58-2940-4e02-9b37-194569f9fbe9"
+        "outputId": "730cae86-a8bb-48d5-d011-f0b9305cf8d4"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -187,9 +200,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# --- CELLA 3: TRAINING FEDERATO AGGRESSIVO ---\n",
+        "# --- CELLA 3: TRAINING FEDERATO \"SMART\" (Quality Gating) ---\n",
         "\n",
-        "def run_federated_simulation_with_score():\n",
+        "def run_federated_simulation_smart():\n",
         "    TRAIN_ROOT = \"CSV_train\"\n",
         "    global_estimators = []\n",
         "\n",
@@ -202,11 +215,14 @@
         "        if csv_files:\n",
         "            client_folders.append(root)\n",
         "\n",
-        "    print(f\"Training Federato su {len(client_folders)} client...\")\n",
+        "    print(f\"Training Federato Smart su {len(client_folders)} client...\")\n",
         "\n",
         "    # Variabili per inizializzazione modello globale\n",
         "    first_X_train = None\n",
         "    first_y_train = None\n",
+        "\n",
+        "    accepted_clients = 0\n",
+        "    rejected_clients = 0\n",
         "\n",
         "    for i, folder in enumerate(client_folders):\n",
         "        files = [os.path.join(folder, f) for f in os.listdir(folder) if f.endswith('.csv')]\n",
@@ -219,52 +235,66 @@
         "        y = df_client['label'].values\n",
         "        X = process_dataframe(df_client)\n",
         "\n",
-        "        if len(X) < 5: continue\n",
+        "        # Saltiamo client con troppi pochi dati\n",
+        "        if len(X) < 10: continue\n",
         "\n",
         "        X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)\n",
         "\n",
-        "        # Salviamo un campione per inizializzare il modello globale alla fine\n",
+        "        # Salviamo il primo per inizializzare il global container\n",
         "        if first_X_train is None:\n",
         "            first_X_train = X_train\n",
         "            first_y_train = y_train\n",
         "\n",
+        "        # Salviamo i dati di validazione per il test finale globale\n",
         "        all_val_features.append(X_val)\n",
         "        all_val_labels.append(y_val)\n",
         "\n",
-        "        # 3. Training Locale\n",
+        "        # 3. Training Locale (Più aggressivo ora)\n",
         "        clf = RandomForestRegressor(\n",
-        "            n_estimators=40,\n",
-        "            max_depth=15,\n",
+        "            n_estimators=60,       # Aumentato: più alberi per client\n",
+        "            max_depth=20,          # Aumentato: cattura relazioni più complesse\n",
         "            min_samples_leaf=2,\n",
-        "            max_features='sqrt',\n",
+        "            max_features='sqrt',   # Evita overfitting\n",
         "            n_jobs=-1,\n",
         "            random_state=42\n",
         "        )\n",
         "\n",
         "        clf.fit(X_train, y_train)\n",
-        "        global_estimators.extend(clf.estimators_)\n",
         "\n",
-        "        if (i+1) % 5 == 0:\n",
-        "            print(f\"   ...completati {i+1} client.\")\n",
+        "        # --- QUALITY GATE ---\n",
+        "        # Il client valuta se stesso prima di inviare\n",
+        "        local_pred = clf.predict(X_val)\n",
+        "        local_mae = mean_absolute_error(y_val, local_pred)\n",
         "\n",
-        "    print(\"\\nAssemblaggio Modello Globale...\")\n",
-        "    # CORREZIONE CRITICA:\n",
-        "    # 1. Creiamo il contenitore\n",
+        "        # Se il MAE locale è > 18 (modello confuso), scartiamo il contributo\n",
+        "        if local_mae < 18.0:\n",
+        "            global_estimators.extend(clf.estimators_)\n",
+        "            accepted_clients += 1\n",
+        "        else:\n",
+        "            rejected_clients += 1\n",
+        "            # (Opzionale) Print per debug\n",
+        "            # print(f\"Client {i} scartato (MAE Locale: {local_mae:.2f})\")\n",
+        "\n",
+        "        if (i+1) % 10 == 0:\n",
+        "            print(f\"   ...processati {i+1} client (Accettati: {accepted_clients}, Scartati: {rejected_clients})\")\n",
+        "\n",
+        "    print(f\"\\nTraining concluso. Contributi integrati: {accepted_clients}/{len(client_folders)}\")\n",
+        "    print(\"Assemblaggio Modello Globale...\")\n",
+        "\n",
+        "    # 1. Container vuoto\n",
         "    dummy_model = RandomForestRegressor(n_estimators=len(global_estimators), random_state=42, n_jobs=-1)\n",
-        "    # 2. Facciamo fit su un dataset fittizio (il primo client) SOLO per inizializzare le classi interne\n",
+        "    # 2. Inizializzazione struttura\n",
         "    dummy_model.fit(first_X_train, first_y_train)\n",
-        "    # 3. SOVRASCRIVIAMO gli alberi con quelli federati (ora non vengono più cancellati)\n",
+        "    # 3. Iniezione intelligenza federata\n",
         "    dummy_model.estimators_ = global_estimators\n",
         "\n",
-        "    print(\"\\n--- VALUTAZIONE PRECISA (LEADERBOARD SIMULATA) ---\")\n",
+        "    print(\"\\n--- VALUTAZIONE GLOBALE ---\")\n",
         "\n",
         "    X_global_val = pd.concat(all_val_features, ignore_index=True)\n",
         "    y_global_true = np.concatenate(all_val_labels)\n",
         "\n",
-        "    # Predizione\n",
         "    raw_preds = dummy_model.predict(X_global_val)\n",
         "\n",
-        "    # Arrotondamento Intero\n",
         "    preds_clipped = np.clip(raw_preds, 0, 100)\n",
         "    preds_integer = np.rint(preds_clipped).astype(int)\n",
         "\n",
@@ -273,60 +303,41 @@
         "    print(f\"Campioni testati: {len(y_global_true)}\")\n",
         "    print(f\"Errore Medio Assoluto (MAE) REALE: {mae:.4f}\")\n",
         "\n",
-        "    print(\"\\n--- Esempi ---\")\n",
-        "    results = pd.DataFrame({\n",
-        "        'Vero': y_global_true[:8],\n",
-        "        'Pred_Int': preds_integer[:8],\n",
-        "        'Delta': np.abs(y_global_true[:8] - preds_integer[:8])\n",
-        "    })\n",
-        "    print(results)\n",
-        "\n",
-        "    if mae < 11:\n",
-        "        print(\"\\n✅ SEI IN ZONA VITTORIA! Invia subito.\")\n",
-        "    elif mae < 13:\n",
-        "        print(\"\\n⚠️ BUONO. Ma si può migliorare.\")\n",
+        "    if mae < 11.5:\n",
+        "        print(\"\\n🚀 OTTIMO! Stiamo scendendo verso il target.\")\n",
+        "    elif mae < 12.5:\n",
+        "        print(\"\\n✅ Miglioramento stabile.\")\n",
         "    else:\n",
-        "        print(\"\\n❌ ANCORA ALTO.\")\n",
+        "        print(\"\\n⚠️ Stabile.\")\n",
         "\n",
         "    return dummy_model\n",
         "\n",
         "# ESECUZIONE\n",
-        "global_model = run_federated_simulation_with_score()"
+        "global_model = run_federated_simulation_smart()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "0xtqdBye2uDw",
-        "outputId": "59a9c57d-2f3b-40e2-864c-f33c3a486891"
+        "outputId": "b578ae9a-8bd4-4e5f-e23e-45bf90312094"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training Federato su 9 client...\n",
-            "   ...completati 5 client.\n",
+            "Training Federato Smart su 9 client...\n",
             "\n",
+            "Training concluso. Contributi integrati: 9/9\n",
             "Assemblaggio Modello Globale...\n",
             "\n",
-            "--- VALUTAZIONE PRECISA (LEADERBOARD SIMULATA) ---\n",
+            "--- VALUTAZIONE GLOBALE ---\n",
             "Campioni testati: 204\n",
-            "Errore Medio Assoluto (MAE) REALE: 11.9069\n",
+            "Errore Medio Assoluto (MAE) REALE: 11.4118\n",
             "\n",
-            "--- Esempi ---\n",
-            "   Vero  Pred_Int  Delta\n",
-            "0    90        72     18\n",
-            "1    78        78      0\n",
-            "2    86        74     12\n",
-            "3    87        69     18\n",
-            "4    92        76     16\n",
-            "5    77        77      0\n",
-            "6    84        76      8\n",
-            "7    92        69     23\n",
-            "\n",
-            "⚠️ BUONO. Ma si può migliorare.\n"
+            "🚀 OTTIMO! Stiamo scendendo verso il target.\n"
           ]
         }
       ]
@@ -373,9 +384,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "J44NCADP2xsT",
-        "outputId": "96bbb2f5-9180-478c-fae5-92289918372e"
+        "outputId": "016b6e28-b60e-4267-b626-f82e4325fa5a"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -385,9 +396,9 @@
             "Generazione file submission...\n",
             "✅ File 'submission_int.csv' pronto! (Valori interi 0-100)\n",
             "   id  label\n",
-            "0   0     69\n",
-            "1   1     71\n",
-            "2   2     71\n",
+            "0   0     68\n",
+            "1   1     69\n",
+            "2   2     70\n",
             "3   3     69\n",
             "4   4     75\n"
           ]
